--- a/templates/index.html
+++ b/templates/index.html
@@ -56,25 +56,10 @@
         <p>
             Bem vindo ao nosso dashboard de fundos imobiliários. 
             Aqui você pode acompanhar os fundos imobiliários que foram extraidos do site <a href="https://www.fundsexplorer.com.br/ranking">fundsexplorer.com.br/ranking</a>
-            por meior de scrapping. Para acessar o dashboard, é necessário fazer o login ou se registrar.
+            por meio de scrapping. Para acessar o dashboard, é necessário fazer o login ou se registrar.
         </p>
         <a href="{{ url_for('login') }}" class="btn">Login</a>
         <a href="{{ url_for('register') }}" class="btn">Registrar</a>
     </div>
 </body>
 </html>
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundos Imobiliários</title>
-</head>
-<body>
-    <h1>Fundos Imobiliários</h1>
-    <iframe src="http://localhost:8501" width="100%" height="800"></iframe>
-</body>
-</html> -->
